@@ -3,6 +3,8 @@
 	* swedish-strings.el (lyskom-sv-edit-mode-map): Make C-c TAB an
 	alternative to C-c C-i so that TTY mode users stay happy.
 
+	* english-strings.el (lyskom-en-edit-mode-map): Ditto.
+
 2001-09-21  Joel Rosdahl  <joel@rosdahl.net>
 
 	* vars.el.in (lyskom-text-buttons): Require pseudo-url to start at
